src/test/test-models/good/keywords-while.stan
parameters {
  real whiley;
}
model {
  whiley ~ normal(0,1);
}
