src/test/test-models/bad/reserved/cholesky_factor_corr.stan
data {
  real cholesky_factor_corr;
}
model {
}
